--- a/index.html
+++ b/index.html
@@ -1,44 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href= "assets/css/style.css"/>
-    <title>About Me</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <title>About Me</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-        </div>
-      </nav>
-      <div class="container-fluid">
-        <div clas="row">
-            <div class=col-md>
-                    <div id="about">
-                            About Me
-                    <hr>
-                    </div>
-            </div>
-            <div class=col-md>
-                
-            </div>
-        </div>
-      </div>  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="nav justify-content-end">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="main">
+          <div id="about">
+            About Me
+          </div>
+          <hr>
+    <div class="row">
+      <div class="col-md-2">
+        <img class="img-thumbnail" src="assets/images/Corey_Mike.png" alt="Bio Image">
+      </div>
+      <div class="col-md-10">
+        <p>
+          My name is Mike Corey and I live in Centennial Colorado. While not a true native of Colorado I’ve lived in
+          this beautiful state for almost all my life. I’m married to a wonderful woman of 9 years and am blessed to
+          have twin 5-year-old boys that keep me on my toes. When not chasing after my kids I enjoy working out,
+          running and Spartan races.AROO!
+        </p>
+        <p>I currently work as a Senior IT Analyst for the Denver Broncos. I’ve been employed by the Broncos for the
+          last 15 years. During my time with the Broncos I’ve been fortunate enough to be part of many great seasons,
+          including our world championship in 2015 for Super Bowl 50. </p>
+
+        <p>I’ve had several different responsibilities in the IT department over my time at the Broncos. These
+          responsibilities include help desk and PC builds as well as network support and more recently database and
+          web application development. I have experience working with ASP.NET web forms, VB.NET, Bootstrap, HTML and
+          CSS. In addition, I also have experience building relational databases in MS SQL, building T-SQL queries and
+          Views as well as paginated and mobile SSRS reports.</p>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  
+  <footer class="footer">
+    Copyright&copy;
+  </footer>
 </body>
+
 </html>
