--- a/portfolio.html
+++ b/portfolio.html
@@ -13,33 +13,57 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="nav justify-content-end">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
+    <div class="container">
+      <a class="navbar-brand" href="#">Mike Corey</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div id="main">
+  <div id="main">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
           <div id="about">
-           Portfolio
+            Portfolio
           </div>
           <hr>
-
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row text-center text-lg-left">
+        <div class="col-md-4 col-xs-6">
+          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Hangman">
+        </div>
+        <div class="col-md-4 col-xs-6">
+          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="RPG">
+        </div>
+        <div class="col-md-4 col-xs-6">
+          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Trivia">
+        </div>
+      </div>
+      <div class="row text-center text-lg-left">
+        <div class="col-md-4 col-xs-6">
+          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Rutgers">
+        </div>
+        <div class="col-md-4 col-xs-6">
+          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="RPS">
         </div>
       </div>
     </div>
