--- a/index.html
+++ b/index.html
@@ -39,32 +39,39 @@
             About Me
           </div>
           <hr>
-    <div class="row">
-      <div class="col-md-2">
-        <img class="img-thumbnail" src="assets/images/Corey_Mike.png" alt="Bio Image">
-      </div>
-      <div class="col-md-10">
-        <p>
-          My name is Mike Corey and I live in Centennial Colorado. While not a true native of Colorado I’ve lived in
-          this beautiful state for almost all my life. I’m married to a wonderful woman of 9 years and am blessed to
-          have twin 5-year-old boys that keep me on my toes. When not chasing after my kids I enjoy working out,
-          running and Spartan races.AROO!
-        </p>
-        <p>I currently work as a Senior IT Analyst for the Denver Broncos. I’ve been employed by the Broncos for the
-          last 15 years. During my time with the Broncos I’ve been fortunate enough to be part of many great seasons,
-          including our world championship in 2015 for Super Bowl 50. </p>
+          <div class="row">
+            <div class="col-md-2">
+              <img class="img-fluid img-thumbnail" src="assets/images/Corey_Mike.png" alt="Bio Image">
+            </div>
+            <div class="col-md-10">
+              <p>
+                My name is Mike Corey and I live in Centennial Colorado. While not a true native of Colorado I’ve lived
+                in
+                this beautiful state for almost all my life. I’m married to a wonderful woman of 9 years and am blessed
+                to
+                have twin 5-year-old boys that keep me on my toes. When not chasing after my kids I enjoy working out,
+                running and Spartan races.AROO!
+              </p>
+              <p>I currently work as a Senior IT Analyst for the Denver Broncos. I’ve been employed by the Broncos for
+                the
+                last 15 years. During my time with the Broncos I’ve been fortunate enough to be part of many great
+                seasons,
+                including our world championship in 2015 for Super Bowl 50. </p>
 
-        <p>I’ve had several different responsibilities in the IT department over my time at the Broncos. These
-          responsibilities include help desk and PC builds as well as network support and more recently database and
-          web application development. I have experience working with ASP.NET web forms, VB.NET, Bootstrap, HTML and
-          CSS. In addition, I also have experience building relational databases in MS SQL, building T-SQL queries and
-          Views as well as paginated and mobile SSRS reports.</p>
+              <p>I’ve had several different responsibilities in the IT department over my time at the Broncos. These
+                responsibilities include help desk and PC builds as well as network support and more recently database
+                and
+                web application development. I have experience working with ASP.NET web forms, VB.NET, Bootstrap, HTML
+                and
+                CSS. In addition, I also have experience building relational databases in MS SQL, building T-SQL
+                queries and
+                Views as well as paginated and mobile SSRS reports.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  </div>
-  </div>
-  
   <footer class="footer">
     Copyright&copy;
   </footer>
