--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,18 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Mike Corey</a>
+    <div class="container-fluid">
+      <div id="name">Mike Corey</div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio
-              <span class="sr-only">(current)</span>
-            </a>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -49,21 +47,26 @@
     <div class="container-fluid">
       <div class="row text-center text-lg-left">
         <div class="col-md-4 col-xs-6">
-          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Hangman">
+          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
+          <div class="imgLabel" >Hangman</div>
         </div>
         <div class="col-md-4 col-xs-6">
-          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="RPG">
+          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG">
+          <div class="imgLabel">RPG Game</div>
         </div>
         <div class="col-md-4 col-xs-6">
-          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Trivia">
+          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia">
+          <div class="imgLabel">Trivia Game</div>
         </div>
       </div>
       <div class="row text-center text-lg-left">
         <div class="col-md-4 col-xs-6">
-          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="Rutgers">
+          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers">
+          <div class="imgLabel">Rutgers Info Widget</div>
         </div>
         <div class="col-md-4 col-xs-6">
-          <img class="img-fluid img-thumbnail" src="http://placehold.it/300x200" alt="RPS">
+          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS">
+          <div class="imgLabel">Rock Paper Scissors</div>
         </div>
       </div>
     </div>
