--- a/portfolio.html
+++ b/portfolio.html
@@ -34,43 +34,45 @@
     </div>
   </nav>
   <div id="main">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div id="about">
-            Portfolio
-          </div>
-          <hr>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
+    <div class="container">
+
       <div class="row text-center text-lg-left">
-        <div class="col-md-4 col-xs-6">
-          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="assets/images/technics-q-c-640-480-1.jpg" alt="Hangman">
+          </a>
           <div class="imgLabel" >Hangman</div>
         </div>
-        <div class="col-md-4 col-xs-6">
-          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG">
+          </a>
           <div class="imgLabel">RPG Game</div>
         </div>
-        <div class="col-md-4 col-xs-6">
-          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia">
+          </a>
           <div class="imgLabel">Trivia Game</div>
         </div>
-      </div>
-      <div class="row text-center text-lg-left">
-        <div class="col-md-4 col-xs-6">
-          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers">
+        </div>
+        <div class="row text-center text-lg-left">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers">
+          </a>
           <div class="imgLabel">Rutgers Info Widget</div>
         </div>
-        <div class="col-md-4 col-xs-6">
-          <img class="img-thumbnail" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS">
+        
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="assets/images/technics-q-c-640-480-9.jpg" alt="RPS">
+          </a>
           <div class="imgLabel">Rock Paper Scissors</div>
         </div>
       </div>
     </div>
-  </div>
+  </div>  
   <footer class="footer">
     Copyright&copy;
   </footer>
